2005-08-10  Andrew Haley  <aph@redhat.com>

* java-gimplify.c (java_gimplify_modify_expr): Fix any pointer
        type mismatches to make legal GIMPLE.

2005-08-10  Robin Green <greenrd@greenrd.org>

        PR java/23230:
        * parse.y (maybe_use_access_method): Generalize check from
        java.lang.Object to any superclass of current_class


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@102988 138bc75d-0d04-0410-961f-82ee72b054a4